[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/Icons/128x128px/arrow.png" type="Texture" id=1]
[ext_resource path="res://sprites/Icons/128x128px/arrow-gray.png" type="Texture" id=2]
[ext_resource path="res://scripts/ArrowSelect.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="ArrowSelect" type="HBoxContainer"]
margin_right = 352.0
margin_bottom = 144.0
custom_constants/separation = 24
script = ExtResource( 3 )

[node name="Back Arrow" type="TextureButton" parent="."]
margin_right = 80.0
margin_bottom = 144.0
rect_min_size = Vector2( 80, 0 )
texture_normal = ExtResource( 1 )
texture_disabled = ExtResource( 2 )
expand = true
flip_h = true

[node name="ItemContainer" type="TabContainer" parent="."]
margin_left = 104.0
margin_right = 248.0
margin_bottom = 144.0
rect_min_size = Vector2( 144, 144 )
custom_styles/panel = SubResource( 1 )
tabs_visible = false

[node name="Next Arrow" type="TextureButton" parent="."]
margin_left = 272.0
margin_right = 352.0
margin_bottom = 144.0
rect_min_size = Vector2( 80, 0 )
texture_normal = ExtResource( 1 )
texture_disabled = ExtResource( 2 )
expand = true

[connection signal="pressed" from="Back Arrow" to="." method="_on_Back_Arrow_pressed"]
[connection signal="pressed" from="Next Arrow" to="." method="_on_Next_Arrow_pressed"]
